{
    "name": "InputActionsDefault",
    "maps": [
        {
            "name": "InGame",
            "id": "ca76cf3d-c6b3-4c3f-9aee-7083f718fcee",
            "actions": [
                {
                    "name": "SetScaleSide",
                    "type": "Value",
                    "id": "0175dacf-cc8c-496e-bf32-1958a72bab22",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SetScaleDirection",
                    "type": "Value",
                    "id": "063ac403-86ab-425d-bbec-52c92bb5a89c",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "48f6b44d-d15d-4ded-8947-3a018d7155ab",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetScaleDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "29ba9703-30ce-4b03-afcf-a3874dbb357a",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetScaleDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1735b483-0dcf-4497-9ef0-16572403603a",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetScaleDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "41b92893-a000-410d-91b8-14bf0bba0755",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetScaleSide",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c96a3af4-e39c-4fbe-bd09-4fb244c7aff9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetScaleSide",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5d6ec33d-28f0-40d7-b1fc-48935191181c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetScaleSide",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}